Fix other spacing issues.

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,11 @@
 	visibility: hidden;
     }
 
+    html, body {
+	page-break-after: avoid !important;
+	page-break-before: avoid !important;
+    }
+
     .page, .page *, #las-curves {
 	visibility: visible;
 	-webkit-print-color-adjust: exact;
@@ -14,6 +19,7 @@
 	margin: 1.25in;
 	page-break-after: always;
 	page-break-before: auto;
+	border: solid 1px rgba(0,0,0,0)
     }
 
     .section-title {
@@ -27,7 +33,11 @@
 	width: 300px !important;
 	margin-left: 50px !important;
     }
-
+    #las-curves {
+	page-break-after: avoid !important;
+	margin-bottom: -100px !important;
+	margin-left: 20px;
+    }
     #frontpage {
 	background-color: rgba(0,0,0,0) !important;
     }
@@ -43,7 +53,7 @@
 	top: calc(65% - 212px) !important;
 	padding: 0px !important;
 	margin: 0px !important;
-	right: calc(100% - 310px) !important;
+	right: calc(100% - 315px) !important;
 	height: 212px !important;
 	clip-path: none !important;
     }
@@ -77,7 +87,7 @@
 	display: none;
     }
     #las-table-print {
-	margin-top: -50px;
+	margin-top: -150px;
 	display: block !important;
 	page-break-after: always !important;
     }
@@ -88,7 +98,9 @@
     #las-table-print th, #las-table-print td {
 	border: 1px solid lightgrey;
 	font-weight: lighter;
-	padding: 3px;
+	padding: 4px;
+	font-size: 10pt;
+	text-align: center;
     }
 
     .page.tablepage {
@@ -100,6 +112,10 @@
 	margin-top: 100px;
 	page-break-after: always;
 	page-break-inside: avoid;
+    }
+
+    #las-table-print table > tr > td:nth-child(2), #las-table-print table > tr > td:nth-child(4) {
+	text-align: left;
     }
 }
 
@@ -210,5 +226,5 @@ body {
 }
 
 #las-table-print {
-    display: none;
+
 }
